--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned - Trybe!</h1>
     </header>
+
+    <div class="avatar-pic">
+        <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
+    </div>
     
 </body>
 </html>
