--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <div class="avatar-pic">
         <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
     </div>
+
+    <ol id="licoes_aprendidas">
+        <h3>Lessons Learned</h3>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Empathy</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
     
 </body>
 </html>
