--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
         <li>Inspect</li>
         <li>Semantic HTML</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <h3>Lessons to Learn</h3>
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>Responsive CSS</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+    </ul>
     
 </body>
 </html>
