--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+
+    <footer id="rodape">
+        &copy 2021 - Allan Carvalho
+    </footer>
     
 </body>
 </html>
