--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
     </div>
 
+    <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
+
     <ol id="licoes_aprendidas">
         <h3>Lessons Learned</h3>
         <li>Unix</li>
