--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <li>SQL</li>
     </ul>
 
+    <article>
+        <h3>Lorem Ipsum Dolor Sit Amet</h3>
+        <br> 
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
+    </article>
+
     <footer id="rodape">
         &copy 2021 - Allan Carvalho
     </footer>
