--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
     </article>
 
+    <aside>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
+    </aside>
+
     <footer id="rodape">
         &copy 2021 - Allan Carvalho
     </footer>
