--- a/index.html
+++ b/index.html
@@ -13,39 +13,46 @@
         <h1 id="titulo">Lessons Learned - Trybe!</h1>
     </header>
 
-    <div class="avatar-pic">
-        <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
-    </div>
+    <section>
 
-    <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
+        <div class="avatar-pic">
+            <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
+        </div>
+        <nav>
+            <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
+            <a rel="noopener" target="_blank" href="https://linkedin.com/in/valueOfAllan/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
+            <a rel="noopener" target="_blank" href="https://instagram.com/instadobabe/"><img src="img/logo-instagram.png" alt="Instagram"></a>
+        </nav>
 
-    <ol id="licoes_aprendidas">
-        <h3>Lessons Learned</h3>
-        <li>Unix</li>
-        <li>Git</li>
-        <li>Github</li>
-        <li>Empathy</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-    </ol>
+        <ol id="licoes_aprendidas">
+            <h3>Lessons Learned</h3>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>Github</li>
+            <li>Empathy</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
 
-    <ul id="licoes_a_aprender">
-        <h3>Lessons to Learn</h3>
-        <li>Javascript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>Responsive CSS</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-    </ul>
+        <ul id="licoes_a_aprender">
+            <h3>Lessons to Learn</h3>
+            <li>Javascript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>Responsive CSS</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+
+    </section>
 
     <article>
         <h3>Lorem Ipsum Dolor Sit Amet</h3>
