--- a/index.html
+++ b/index.html
@@ -13,57 +13,64 @@
         <h1 id="titulo">Lessons Learned - Trybe!</h1>
     </header>
 
-    <section>
+    <main class="content">
 
-        <div class="avatar-pic">
-            <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
+        <section>
+
+            <div class="avatar-pic">
+                <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
+            </div>
+            <nav>
+                <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
+                <a rel="noopener" target="_blank" href="https://linkedin.com/in/valueOfAllan/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
+                <a rel="noopener" target="_blank" href="https://instagram.com/instadobabe/"><img src="img/logo-instagram.png" alt="Instagram"></a>
+            </nav>
+
+            <ol id="licoes_aprendidas">
+                <h3>Lessons Learned</h3>
+                <li>Unix</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Empathy</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+
+            <ul id="licoes_a_aprender">
+                <h3>Lessons to Learn</h3>
+                <li>Javascript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>Responsive CSS</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+
+        </section>
+
+        <article>
+            <h3>Lorem Ipsum Dolor Sit Amet</h3>
+            <br> 
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
+        </article>
+
+        <aside>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
+        </aside>
+
+        <div class="table">
+            <table>hello world!</table>
         </div>
-        <nav>
-            <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
-            <a rel="noopener" target="_blank" href="https://linkedin.com/in/valueOfAllan/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
-            <a rel="noopener" target="_blank" href="https://instagram.com/instadobabe/"><img src="img/logo-instagram.png" alt="Instagram"></a>
-        </nav>
-
-        <ol id="licoes_aprendidas">
-            <h3>Lessons Learned</h3>
-            <li>Unix</li>
-            <li>Git</li>
-            <li>Github</li>
-            <li>Empathy</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-
-        <ul id="licoes_a_aprender">
-            <h3>Lessons to Learn</h3>
-            <li>Javascript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>Responsive CSS</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
-
-    </section>
-
-    <article>
-        <h3>Lorem Ipsum Dolor Sit Amet</h3>
-        <br> 
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
-    </article>
-
-    <aside>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
-    </aside>
+    </main>
 
     <footer id="rodape">
         &copy 2021 - Allan Carvalho
