--- a/index.html
+++ b/index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project - Lessons Learned!</title>
+    <title>Project - Lessons Learned</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned - Trybe!</h1>
     </header>
-
     <main class="content">
-
-        <section>
-
+        <section class="lado-esquerdo">
             <div class="avatar-pic">
                 <img id="minha_foto" alt="Allan Carvalho" src="img/me.jpg">
             </div>
-            <nav>
+            <h2 class="name">Allan Carvalho</h2>
+            <nav class="social-icons">
                 <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
                 <a rel="noopener" target="_blank" href="https://linkedin.com/in/valueOfAllan/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
                 <a rel="noopener" target="_blank" href="https://instagram.com/instadobabe/"><img src="img/logo-instagram.png" alt="Instagram"></a>
@@ -56,14 +53,14 @@
 
         </section>
 
-        <article>
+        <article class="lado-direito">
             <h3>Lorem Ipsum Dolor Sit Amet</h3>
             <br> 
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
         </article>
 
-        <aside>
+        <aside class="extra-content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
         </aside>
 
