Adicionando vídeos informativos

--- a/index.html
+++ b/index.html
@@ -52,18 +52,24 @@
             </ul>
 
         </section>
-
         <article class="lado-direito">
+
             <h3>Lorem Ipsum Dolor Sit Amet</h3>
             <br> 
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
+
+            <br>
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/kJkQFVqySUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br>
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/FHzbInWAWMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </article>
 
         <aside class="extra-content">
+            <h4>A little more...</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
         </aside>
-
         <div class="table">
             <table>hello world!</table>
         </div>
@@ -72,6 +78,5 @@
     <footer id="rodape">
         &copy 2021 - Allan Carvalho
     </footer>
-    
 </body>
 </html>
