--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
         </section>
         <article class="lado-direito">
 
-            <h3>Lorem Ipsum Dolor Sit Amet</h3>
+            <h3>Learning with Trybe</h3>
             <br> 
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ducimus vero dignissimos eum quia corrupti iste similique ipsa itaque? Officiis adipisci porro totam doloribus cumque iste in ducimus iure eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis laborum. Sed ut repudiandae corrupti necessitatibus recusandae rerum cumque quas maxime. Voluptatum consequuntur rem sint numquam quos, vitae a molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur aut quis delectus.</p>
+            <p>
+                It's been almost 2 weeks since I started my IT course program with Trybe and so far it's an amazing experience! It's very intense but I've been consuming so much knowledge in so little time that I think I'm getting addicted to it. It's really amazing to see this little HTML5 page going up and looking so good! Git & Github and the black screen were something so 'hacker' looking before and now... here I am! Using the black screen to publish this page. If you want to know more about this course, check the videos below (in portuguese).
+            </p>
 
             <br>
             <iframe width="100%" height="400" src="https://www.youtube.com/embed/kJkQFVqySUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -67,8 +69,8 @@
         </article>
 
         <aside class="extra-content">
-            <h4>A little more...</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut sunt hic nisi quasi. Voluptas nobis unde dicta eaque nihil temporibus sapiente hic cum quibusdam accusamus reprehenderit animi, doloribus totam magnam? </p>
+            <h4>Something remarkable...</h4>
+            <p>I think the most remarkable exercise is going to be my first Github Page with my portfolio. You can check <a href="https://gitdoallan.github.io/">here</a>.</p>
         </aside>
         <div class="table">
             <table>hello world!</table>
