--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <br> 
 
             <p>
-                It's been almost 2 weeks since I started my IT course program with Trybe and so far it's an amazing experience! It's very intense but I've been consuming so much knowledge in so little time that I think I'm getting addicted to it. It's really amazing to see this little HTML5 page going up and looking so good! If you want to know more about this course, check the videos below (in portuguese).
+                It's been almost 2 weeks since I started my IT course program with Trybe and so far it's an amazing experience! It's very intense but I've been consuming so much knowledge in so little time that I think I'm getting addicted to it. It's really amazing to see this little HTML5 page going up and looking so good. If you want to know more about this course, check the videos below (in portuguese).
             </p>
 
             <br>
