--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2 class="name">Allan Carvalho</h2>
             <nav class="social-icons">
                 <a rel="noopener" target="_blank" href="https://github.com/gitdoallan/"><img src="img/logo-github.png" alt="Github"></a>
-                <a rel="noopener" target="_blank" href="https://linkedin.com/in/valueOfAllan/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
+                <a rel="noopener" target="_blank" href="https://linkedin.com/in/allanforbusiness/"><img src="img/logo-linkedin.png" alt="LinkedIn"></a>
                 <a rel="noopener" target="_blank" href="https://instagram.com/instadobabe/"><img src="img/logo-instagram.png" alt="Instagram"></a>
             </nav>
 
@@ -69,12 +69,10 @@
         </article>
 
         <aside class="extra-content">
-            <h4>Something remarkable...</h4>
-            <p>I think the most remarkable exercise is going to be my first Github Page with my portfolio. You can check <a href="https://gitdoallan.github.io/">here</a>.</p>
+            <h4>My Portfolio...</h4>
+            <p>You can check my portfolio <a href="https://allan-in-the.cloud/">here</a>.</p>
         </aside>
-        <div class="table">
-            <table>hello world!</table>
-        </div>
+
     </main>
 
     <footer id="rodape">
